# Project2_Vladimirov_M-25-555

./: .gitignore  Makefile  README.md  pyproject.toml
src/primitive_db/: commands.py  constants.py  core.py  decorators.py  errors.py  main.py  parser.py  storage.py  utils.py
src/simple_json_db/: __init__.py  cli.py  engine.py  schema.py  storage.py  types.py  where.py
