[tool.poetry]
name = "primitive-db"
version = "0.1.0"
description = "Учебная примитивная файловая база данных (JSON, без SQL)"
authors = ["Glebov <rfugu@yandex.ru>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "primitive_db", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
prompt = "0.4.1"
prettytable = "^3.10.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.0"

[tool.poetry.scripts]
project = "primitive_db.main:run"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
