[project]
name = "simple-json-db"
version = "0.1.0"
description = "Простая файловая база данных без SQL (JSON + CLI)"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
simpledb = "simple_json_db.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
